--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ edition = "2021"
 
 [dependencies]
 rand = "0.8"
+rand_distr = "0.4.3"
+serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
